--- a/circle.yml
+++ b/circle.yml
@@ -20,6 +20,9 @@ deployment:
   hub:
     branch: master
     commands:
+      #Build docker image and run container 
+      - docker build -t $IMAGE_NAME .
+      - docker tag $IMAGE_NAME $IMAGE_NAME:$CIRCLE_BUILD_NUM
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push $IMAGE_NAME:$CIRCLE_BUILD_NUM
       
