--- a/circle.yml
+++ b/circle.yml
@@ -22,9 +22,9 @@ deployment:
     commands:
       #Build docker image and run container 
       - docker build -t $IMAGE_NAME .
-      - docker tag $IMAGE_NAME $IMAGE_NAME:$CIRCLE_BUILD_NUM
+      - docker tag $IMAGE_NAME $DOCKER_USER/$IMAGE_NAME:$CIRCLE_BUILD_NUM
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker push $IMAGE_NAME:$CIRCLE_BUILD_NUM
+      - docker push $DOCKER_USER/$IMAGE_NAME:$CIRCLE_BUILD_NUM
       
       # # Deploy to sit.ezecloud.net
       # - curl -X POST $TUTUM_WEBHOOK_SIT
